<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">无厘投</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_hint">手机号/用户名</string>
    <string name="login_text">登录</string>
    <string name="forgot_password_text">忘记密码</string>
    <string name="register_text"> 注册用户</string>
    <string name="touch_login_text">一键登录</string>
    <string name="tv_swipe_refresh_text">下拉刷新</string>
    <string name="swipe_refreshing">正在刷新</string>
    <string name="swipe_refresh_finish">刷新完成</string>
    <string name="username">用户名</string>
    <string name="my_post">我发起的</string>
    <string name="my_attention">我关注的</string>
    <string name="title_activity_settings">Settings</string>
    <string name="seting">设置</string>
    <string name="push">推送消息</string>
    <string name="economy">省流量模式</string>
    <string name="night_model">夜间模式</string>
    <string name="clean_cache">清除缓存</string>
    <string name="look_update">检查更新</string>
    <string name="appraise">给我评分</string>
    <string name="user_protocol">用户协议</string>
    <string name="privacy_statement">隐私权声明</string>
    <string name="logout">退出登录</string>
    <string name="home_title_image_text">图文</string>
    <string name="home_title_video">视频</string>
    <string name="home_title_attention">关注</string>
    <string name="question_content">你更喜欢冬天还是夏天？</string>
    <string name="push_vote">发起投票</string>
    <string name="push_questionnaire">发布问卷</string>
    <string name="questionnaire_push">问卷调查</string>
    <string name="register">注册</string>
    <string name="et_vote_content_hint">请输入您的话题...</string>
    <string name="words_number">0</string>
    <string name="words_number_limit">/50</string>
    <string name="questionnaire_words_number_limit">/2000</string>
    <string name="push_add">添加项目</string>
    <string name="push_scale">缩放图片</string>
    <string name="push_move">移动图片</string>
    <string name="push_location">发布位置</string>
    <string name="push_topic">选择话题</string>
    <string name="push_timing">定时选择</string>
    <string name="fill_tel">输入邮箱地址</string>
    <string name="fill_verification_code">输入验证码</string>
    <string name="set_password">设置密码</string>
    <string name="fill_tel_hint">请输入你的邮箱账号</string>
    <string name="fill_tel_protocol_agree_hint">注册即表示同意</string>
    <string name="protocol_name">《隐私权声明》</string>
    <string name="choice_text">选择</string>
    <string name="add_text">添加</string>
    <string name="topic_title_hint">请输入话题名</string>

</resources>