<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/setting_top"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:padding="10dp">

        <Switch
            android:id="@+id/switch_push"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/push"
            style="@style/setting_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="#ccc"/>
        <Switch
            android:id="@+id/switch_economy"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/economy"
            android:layout_marginBottom="5dp"
            style="@style/setting_text"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="#ccc"/>
        <Switch
            android:id="@+id/switch_night_model"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/night_model"
            style="@style/setting_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="#ccc"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >

            <TextView
                android:id="@+id/tv_clean_cache"
                style="@style/setting_text"
                android:text="@string/clean_cache" />

            <TextView
                android:id="@+id/cache_value"
                style="@style/setting_text"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="102MB" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="#ccc"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_look_update"
                style="@style/setting_text"
                android:text="@string/look_update"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="#ccc"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_appraise"
                style="@style/setting_text"
                android:text="@string/appraise" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="#ccc"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tv_user_protocol"
                style="@style/setting_text"
                android:text="@string/user_protocol"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="#ccc"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tv_privacy_statement"
                style="@style/setting_text"
                android:text="@string/privacy_statement"/>
        </RelativeLayout>

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_selector"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/logout"
            android:textColor="@android:color/white" />


    </LinearLayout>


</LinearLayout>
