<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <include layout="@layout/push_top"></include>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="4"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/push_question_content"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="9"
                            android:hint="@string/et_vote_content_hint" />


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/words_number" />

                            <TextView
                                android:id="@+id/words_number_limit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/words_number_limit" />
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/location_hint"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#80bebebe"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/push_left"
                            style="@style/push_style"
                            android:src="@mipmap/push_img" />

                        <!--<ImageView-->
                        <!--android:id="@+id/push_video_left"-->
                        <!--style="@style/push_style"-->
                        <!--android:src="@mipmap/push_video" />-->

                        <!--<ImageView-->
                        <!--android:id="@+id/push_link_one"-->
                        <!--style="@style/push_style"-->
                        <!--android:src="@mipmap/push_link" />-->
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:background="@color/gray"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/push_right"
                            style="@style/push_style"
                            android:src="@mipmap/push_img" />

                        <!--<ImageView-->
                        <!--android:id="@+id/push_video_right"-->
                        <!--style="@style/push_style"-->
                        <!--android:src="@mipmap/push_video" />-->

                        <!--<ImageView-->
                        <!--android:id="@+id/push_link_two"-->
                        <!--style="@style/push_style"-->
                        <!--android:src="@mipmap/push_link" />-->
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:gravity="center"-->
                <!--android:padding="2dp">-->

                <!--<Button-->
                <!--android:id="@+id/puish_bt_add"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@android:color/transparent"-->
                <!--android:drawableTop="@mipmap/push_add"-->
                <!--android:text="@string/push_add"-->
                <!--android:textSize="10dp" />-->

                <!--<Button-->
                <!--android:id="@+id/push_bt_scale"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@android:color/transparent"-->
                <!--android:drawableTop="@mipmap/push_scale"-->
                <!--android:text="@string/push_scale"-->
                <!--android:textSize="10dp" />-->

                <!--<Button-->
                <!--android:id="@+id/push_bt_move"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@android:color/transparent"-->
                <!--android:drawableTop="@mipmap/push_move"-->
                <!--android:text="@string/push_move"-->
                <!--android:textSize="10dp" />-->
                <!--</LinearLayout>-->

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/bt_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@mipmap/push_location"
                        android:text="@string/push_location" />

                    <Button
                        android:id="@+id/bt_topic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@mipmap/push_topic"
                        android:text="@string/push_topic" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/bt_timing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@mipmap/push_timing"
                        android:text="@string/push_timing" />

                    <Button
                        android:id="@+id/choice_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@mipmap/push_visible"
                        android:text="谁能看见" />
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>

        <com.tuyenmonkey.mkloader.MKLoader
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:mk_color="@color/apporange"
            app:mk_type="TwinFishesSpinner" />

    </RelativeLayout>


</LinearLayout>
