<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.tuyenmonkey.mkloader.MKLoader
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:mk_color="@color/apporange"
            app:mk_type="TwinFishesSpinner" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@mipmap/login_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="60dp"
            android:paddingRight="60dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@mipmap/default_portrait_login"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="25dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/user_sign_login" />

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.75"
                        android:background="@null"
                        android:ems="10"
                        android:hint="请输入用户名"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />
                <!--android:hint="@string/username_hint"-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/password_sign_login" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.75"
                        android:background="@null"
                        android:ems="10"
                        android:hint="请输入密码"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_login"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/btn_login_selector"
                    android:ems="5"
                    android:text="@string/login_text"
                    android:textColor="@android:color/white"
                    android:textSize="20dp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp">

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_text"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/forgot_password_text"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_sina"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginRight="50dp"
                    android:src="@mipmap/sina" />

                <ImageView
                    android:id="@+id/iv_wechat"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginRight="50dp"
                    android:src="@mipmap/wechat" />

                <ImageView
                    android:id="@+id/iv_qq"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@mipmap/qq" />

            </LinearLayout>

            <!--<TextView-->
            <!--android:id="@+id/tv_touch_login"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/touch_login_text" />-->
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>